--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -147,8 +147,6 @@ GAIM_LIBS = @GAIM_LIBS@
 GAIM_PLUGIN_DIR = @GAIM_PLUGIN_DIR@
 GAIM_PLUGIN_FALSE = @GAIM_PLUGIN_FALSE@
 GAIM_PLUGIN_TRUE = @GAIM_PLUGIN_TRUE@
-HUB_DIR = @HUB_DIR@
-HUB_NAME = @HUB_NAME@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -160,8 +158,6 @@ LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
-MAKE_HUB_FALSE = @MAKE_HUB_FALSE@
-MAKE_HUB_TRUE = @MAKE_HUB_TRUE@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
@@ -228,7 +224,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = @UI_DIR@ @HUB_DIR@ @ENC_DIR@ @AUTH_DIR@ @GAIM_PLUGIN_DIR@ 
+SUBDIRS = @UI_DIR@ @ENC_DIR@ @AUTH_DIR@ @GAIM_PLUGIN_DIR@ 
 directnet_SOURCES = chat.cc \
 client.cc \
 connection.cc \
