--- a/src/gaim2-plugin/Makefile.am
+++ b/src/gaim2-plugin/Makefile.am
@@ -1,5 +1,6 @@
 noinst_LIBRARIES=libgaim_plugin.a
-libgaim_plugin_a_SOURCES=event.cc gaim-plugin.cc
+libgaim_plugin_a_SOURCES=event.cc gaim-plugin.cc cmd.c
+libgaim_plugin_a_CFLAGS=@GAIM_CFLAGS@ -I.. -DGAIM_PLUGIN -DGAIM_PLUGINS
 libgaim_plugin_a_CXXFLAGS=@GAIM_CFLAGS@ -I.. -DGAIM_PLUGIN -DGAIM_PLUGINS -fpermissive
 
 pixdir=$(prefix)/share/pixmaps/gaim/status/default
