--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,7 @@ AC_CHECK_LIB([c], [gethostbyname],
 # If we have libwsock32, we probably want it
 AC_CHECK_LIB([wsock32], [main])
 
+AC_CHECK_FUNC(gettimeofday,[AC_DEFINE(HAVE_GETTIMEOFDAY, 1, [Defined if gettimeofday() is available])])
 
 # Figure out what UI to use
 AC_ARG_ENABLE(ui,
