--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,10 @@ route.cc \
 server.cc \
 whereami.cc
 
+if NO_GETTIMEOFDAY
+directnet_SOURCES+=compat/gettimeofday.c
+endif
+
 directnet_CFLAGS=@UI_CFLAGS@ @ENC_CFLAGS@ @AUTH_CFLAGS@
 directnet_CXXFLAGS=@UI_CXXFLAGS@ @ENC_CXXFLAGS@ @AUTH_CXXFLAGS@
 directnet_LDFLAGS=@UI_LDFLAGS@ @ENC_LDFLAGS@ @AUTH_LDFLAGS@
@@ -35,6 +39,10 @@ message.cc \
 route.cc \
 server.cc \
 whereami.cc
+
+if NO_GETTIMEOFDAY
+libdirectnet_gaim_la_SOURCES+=compat/gettimeofday.c
+endif
 
 libdirectnet_gaim_la_CFLAGS=@ENC_CFLAGS@ @AUTH_CFLAGS@ \
  @GAIM_CFLAGS@ -DGAIM_PLUGIN -DGAIM_PLUGINS
