Fixed configure.ac so that it looks for slang.h, not slang/slang.h.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@464 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -152,7 +152,7 @@ fi
 if test "x$ui" = "xslang" || ( test "x$ui" = "xdetermine" && test "x$found_ui" = "xno" )
 then
 	slang_ui=ok
-	AC_CHECK_HEADER([slang/slang.h], [],
+	AC_CHECK_HEADER([slang.h], [],
           [slang_ui=notok])
         AC_CHECK_LIB([slang], [SLtt_cls], [],
           [slang_ui=notok])
