configure, src/Makefile.in, config.h.in, configure.ac: Added dht.{cc,h}
src/enc.h, src/enc-cyfer/cyfer.cc: Cache the public key hash.

src/dht.cc, src/dht.h: Slightly more support.



git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/protov2_Branch@488 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,7 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_CXX
 AC_PROG_LIBTOOL
+AC_PROG_RANLIB
 
 # Checks for libraries.
 # On solaris, we need -lnsl and -lsocket
@@ -51,6 +52,7 @@ AC_CHECK_FUNC(gettimeofday,[
  AC_DEFINE(HAVE_GETTIMEOFDAY, 1, [Defined if gettimeofday() is available])
  HAVE_GETTIMEOFDAY=true
 ], [
+ AC_CHECK_FUNCS([ftime])
  HAVE_GETTIMEOFDAY=false
 ])
 AM_CONDITIONAL(NO_GETTIMEOFDAY, test "x$HAVE_GETTIMEOFDAY" = "xfalse")
@@ -342,14 +344,16 @@ AC_SUBST(AUTH_DIR)
 # Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h malloc.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
 AC_FUNC_FORK
-#AC_FUNC_MALLOC # This test breaks on MingW
+AC_FUNC_SELECT_ARGTYPES
 AC_TYPE_SIGNAL
+AC_TYPE_SIZE_T
 AC_FUNC_STAT
-AC_CHECK_FUNCS([dup2 gethostbyname gethostname inet_ntoa memset mkdir socket])
+AC_CHECK_FUNCS([dup2 getcwd gethostbyname gethostname gettimeofday inet_ntoa \
+memmove memset mkdir select socket strchr strdup strerror strrchr])
 AC_OUTPUT
