--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -61,11 +61,11 @@ am__installdirs = "$(DESTDIR)$(gaimdir)" "$(DESTDIR)$(bindir)"
 gaimLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(gaim_LTLIBRARIES)
 am__libdirectnet_gaim_la_SOURCES_DIST = binseq.cc chat.cc client.cc \
-	connection.cc directnet.cc dnconfig.cc message.cc route.cc \
-	server.cc whereami.cc compat/gettimeofday.c
+	connection.cc dht.cc directnet.cc dnconfig.cc message.cc \
+	route.cc server.cc whereami.cc compat/gettimeofday.c
 @GAIM_PLUGIN_TRUE@@NO_GETTIMEOFDAY_TRUE@am__objects_1 = libdirectnet_gaim_la-gettimeofday.lo
 @GAIM_PLUGIN_TRUE@am_libdirectnet_gaim_la_OBJECTS = binseq.lo chat.lo \
-@GAIM_PLUGIN_TRUE@	client.lo connection.lo directnet.lo \
+@GAIM_PLUGIN_TRUE@	client.lo connection.lo dht.lo directnet.lo \
 @GAIM_PLUGIN_TRUE@	dnconfig.lo message.lo route.lo server.lo \
 @GAIM_PLUGIN_TRUE@	whereami.lo $(am__objects_1)
 libdirectnet_gaim_la_OBJECTS = $(am_libdirectnet_gaim_la_OBJECTS)
@@ -73,16 +73,17 @@ libdirectnet_gaim_la_OBJECTS = $(am_libdirectnet_gaim_la_OBJECTS)
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am__directnet_SOURCES_DIST = binseq.cc chat.cc client.cc connection.cc \
-	directnet.cc dnconfig.cc message.cc route.cc server.cc \
+	dht.cc directnet.cc dnconfig.cc message.cc route.cc server.cc \
 	whereami.cc compat/gettimeofday.c
 @NO_GETTIMEOFDAY_TRUE@am__objects_2 =  \
 @NO_GETTIMEOFDAY_TRUE@	directnet-gettimeofday.$(OBJEXT)
 am_directnet_OBJECTS = directnet-binseq.$(OBJEXT) \
 	directnet-chat.$(OBJEXT) directnet-client.$(OBJEXT) \
-	directnet-connection.$(OBJEXT) directnet-directnet.$(OBJEXT) \
-	directnet-dnconfig.$(OBJEXT) directnet-message.$(OBJEXT) \
-	directnet-route.$(OBJEXT) directnet-server.$(OBJEXT) \
-	directnet-whereami.$(OBJEXT) $(am__objects_2)
+	directnet-connection.$(OBJEXT) directnet-dht.$(OBJEXT) \
+	directnet-directnet.$(OBJEXT) directnet-dnconfig.$(OBJEXT) \
+	directnet-message.$(OBJEXT) directnet-route.$(OBJEXT) \
+	directnet-server.$(OBJEXT) directnet-whereami.$(OBJEXT) \
+	$(am__objects_2)
 directnet_OBJECTS = $(am_directnet_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
@@ -245,7 +246,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = @UI_DIR@ @ENC_DIR@ @AUTH_DIR@ @GAIM_PLUGIN_DIR@ 
-directnet_SOURCES = binseq.cc chat.cc client.cc connection.cc \
+directnet_SOURCES = binseq.cc chat.cc client.cc connection.cc dht.cc \
 	directnet.cc dnconfig.cc message.cc route.cc server.cc \
 	whereami.cc $(am__append_1)
 directnet_CFLAGS = @UI_CFLAGS@ @ENC_CFLAGS@ @AUTH_CFLAGS@
@@ -258,7 +259,7 @@ directnet_LDADD = @UI_DIR@/libui.a \
 @GAIM_PLUGIN_TRUE@gaimdir = $(libdir)/gaim
 @GAIM_PLUGIN_TRUE@gaim_LTLIBRARIES = libdirectnet_gaim.la
 @GAIM_PLUGIN_TRUE@libdirectnet_gaim_la_SOURCES = binseq.cc chat.cc \
-@GAIM_PLUGIN_TRUE@	client.cc connection.cc directnet.cc \
+@GAIM_PLUGIN_TRUE@	client.cc connection.cc dht.cc directnet.cc \
 @GAIM_PLUGIN_TRUE@	dnconfig.cc message.cc route.cc server.cc \
 @GAIM_PLUGIN_TRUE@	whereami.cc $(am__append_2)
 @GAIM_PLUGIN_TRUE@libdirectnet_gaim_la_CFLAGS = @ENC_CFLAGS@ @AUTH_CFLAGS@ \
@@ -377,10 +378,12 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/client.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/connection.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dht.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-binseq.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-chat.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-client.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-connection.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-dht.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-directnet.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-dnconfig.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-gettimeofday.Po@am__quote@
@@ -514,6 +517,20 @@ directnet-connection.obj: connection.cc
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='connection.cc' object='directnet-connection.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -c -o directnet-connection.obj `if test -f 'connection.cc'; then $(CYGPATH_W) 'connection.cc'; else $(CYGPATH_W) '$(srcdir)/connection.cc'; fi`
+
+directnet-dht.o: dht.cc
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -MT directnet-dht.o -MD -MP -MF "$(DEPDIR)/directnet-dht.Tpo" -c -o directnet-dht.o `test -f 'dht.cc' || echo '$(srcdir)/'`dht.cc; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/directnet-dht.Tpo" "$(DEPDIR)/directnet-dht.Po"; else rm -f "$(DEPDIR)/directnet-dht.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dht.cc' object='directnet-dht.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -c -o directnet-dht.o `test -f 'dht.cc' || echo '$(srcdir)/'`dht.cc
+
+directnet-dht.obj: dht.cc
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -MT directnet-dht.obj -MD -MP -MF "$(DEPDIR)/directnet-dht.Tpo" -c -o directnet-dht.obj `if test -f 'dht.cc'; then $(CYGPATH_W) 'dht.cc'; else $(CYGPATH_W) '$(srcdir)/dht.cc'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/directnet-dht.Tpo" "$(DEPDIR)/directnet-dht.Po"; else rm -f "$(DEPDIR)/directnet-dht.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='dht.cc' object='directnet-dht.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -c -o directnet-dht.obj `if test -f 'dht.cc'; then $(CYGPATH_W) 'dht.cc'; else $(CYGPATH_W) '$(srcdir)/dht.cc'; fi`
 
 directnet-directnet.o: directnet.cc
 @am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CXXFLAGS) $(CXXFLAGS) -MT directnet-directnet.o -MD -MP -MF "$(DEPDIR)/directnet-directnet.Tpo" -c -o directnet-directnet.o `test -f 'directnet.cc' || echo '$(srcdir)/'`directnet.cc; \
