*: Changed Makefiles since PROTOCOL is now in docs/
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@558 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
-SUBDIRS=src
+SUBDIRS=src docs
 
 appsdir=$(datadir)/applications
 apps_DATA=directnet.desktop
 
 docsdir=$(datadir)/doc/directnet
-docs_DATA=AUTHORS ChangeLog COPYING PROTOCOL README
+docs_DATA=AUTHORS ChangeLog COPYING README
 
