--- a/src/ui-fltk/Makefile.am
+++ b/src/ui-fltk/Makefile.am
@@ -6,6 +6,7 @@ libui_a_SOURCES=AutoConnWindow.cc \
 AutoConnYNWindow.cc \
 BuddyWindow.cc \
 ChatWindow.cc \
+DHTWindow.cc \
 NameWindow.cc \
 QWindow.cc \
 event.cc \
