*: Improved UI, fixed dumb UI
git-svn-id: svn://svn.code.sf.net/p/directnet/code/directnet/trunk@601 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/src/ui-fltk/Makefile.am
+++ b/src/ui-fltk/Makefile.am
@@ -6,6 +6,7 @@ libui_a_SOURCES=AutoConnWindow.cc \
 AutoConnYNWindow.cc \
 BuddyWindow.cc \
 ChatWindow.cc \
+ChannelWindow.cc \
 DHTWindow.cc \
 NameWindow.cc \
 QWindow.cc \
