--- a/src/ui-fltk/Makefile.in
+++ b/src/ui-fltk/Makefile.in
@@ -53,8 +53,9 @@ libui_a_AR = $(AR) $(ARFLAGS)
 libui_a_LIBADD =
 am_libui_a_OBJECTS = AutoConnWindow.$(OBJEXT) \
 	AutoConnYNWindow.$(OBJEXT) BuddyWindow.$(OBJEXT) \
-	ChatWindow.$(OBJEXT) DHTWindow.$(OBJEXT) NameWindow.$(OBJEXT) \
-	QWindow.$(OBJEXT) event.$(OBJEXT) ui.$(OBJEXT)
+	ChatWindow.$(OBJEXT) ChannelWindow.$(OBJEXT) \
+	DHTWindow.$(OBJEXT) NameWindow.$(OBJEXT) QWindow.$(OBJEXT) \
+	event.$(OBJEXT) ui.$(OBJEXT)
 libui_a_OBJECTS = $(am_libui_a_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
@@ -209,6 +210,7 @@ libui_a_SOURCES = AutoConnWindow.cc \
 AutoConnYNWindow.cc \
 BuddyWindow.cc \
 ChatWindow.cc \
+ChannelWindow.cc \
 DHTWindow.cc \
 NameWindow.cc \
 QWindow.cc \
@@ -265,6 +267,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AutoConnWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AutoConnYNWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/BuddyWindow.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ChannelWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ChatWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/DHTWindow.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/NameWindow.Po@am__quote@
