*: In the middle of major refactoring to enable libdirectnet (currently does not compile).
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@634 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_PREREQ(2.5)
 AC_INIT(directnet, [2.0a9], [cdgregorr@users.sourceforge.net])
 AC_CONFIG_AUX_DIR([scripts])
 AM_INIT_AUTOMAKE()
-AC_CONFIG_SRCDIR([src/ui.h])
+AC_CONFIG_SRCDIR([src/directnet.cc])
 AC_CONFIG_HEADER([config.h])
 
 AC_CONFIG_FILES(
