--- a/src/enc-cyfer/Makefile.am
+++ b/src/enc-cyfer/Makefile.am
@@ -1,10 +1,16 @@
 SUBDIRS=cyfer
 
-AM_CXXFLAGS=@ENC_CFLAGS@ -I.. -Lcyfer/lib -Icyfer/include -Lgmp -Igmp
-AM_LDFLAGS=@ENC_LDFLAGS@ -Lcyfer/lib -Lgmp
+AM_CXXFLAGS=@ENC_CFLAGS@ -I.. -Lcyfer/lib -Icyfer/include
+AM_LDFLAGS=@ENC_LDFLAGS@ -Lcyfer/lib
 
 noinst_LIBRARIES=libenc.a
 libenc_a_SOURCES=cyfer.cc
+
+all-local:
+	$(AR) x cyfer/lib/.libs/libcyfer.a
+
+clean-local:
+	-rm -f *.o
 
 install:
 	$(MAKE) install-recursive SUBDIRS=""
